# lumenia

./: .gitignore  .npmrc  AGENT_GUIDE.md  ANTI_DRAIN.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EVIDENCE.md  LICENSE  OFF_RAMP_VERIFICATION.md  POSITIONING.md  PROGRESS.md  README.md  brand.md  package.json  pnpm-lock.yaml  stack.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml
apps/sponsor/: .env.example  README.md  build-vercel.mjs  package.json  tsconfig.json  vercel.json  wrangler.toml
apps/sponsor/src/: index.ts  lumendrop-gasless-deposit-spike.ts  lumendrop-onchain-proof.ts  lumendrop-relay-test.ts  spike1-sponsored-claim.ts  spike10-v2-reclaim.ts  spike1b-kms-rawsign.ts  spike1c-wire-parity.ts  spike4-cctp-bridge.ts  spike5-sponsored-send.ts  worker.ts  (+9 more)
apps/web/: .gitignore  README.md  next.config.ts  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json
contracts/lumen-drop/: Cargo.toml
contracts/lumen-drop/proptest-regressions/: test.txt
contracts/lumen-drop/src/: lib.rs  test.rs
contracts/lumen-drop/test_snapshots/test/: deposit_then_claim_to_late_bound_payout.1.json  duplicate_deposit_and_bad_amount_rejected.1.json  group_claim_blocked_after_expiry.1.json  group_drop_first_n_equal_shares.1.json  group_reclaim_leftover_after_expiry.1.json  group_signature_is_domain_separated_from_single.1.json  reclaim_after_expiry_only_by_sender.1.json  reclaimed_pool_cannot_drain_another_drops_escrow.1.json  relayer_cannot_redirect_funds.1.json  wrong_link_key_is_rejected.1.json
(+231 files in other folders)
