[package]
name = "lumen-drop"
version = "0.1.0"
edition = "2021"
description = "Lumenia v2 Soroban escrow — late-bound payout link drops + group drops (USDC via SAC)"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
ed25519-dalek = "2"
proptest = "1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
